# P1_Datos2

./: CMakeLists.txt  ListaDoble.h  MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h  Nodo.h  main.cpp  sorting.h
output/: HolaMundo
tests/: CMakeLists.txt  test_lista.cpp  test_mpointer.cpp
